Fix alignment.

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2,8 +2,9 @@ a.site-title:before {
     content: "";
     display: block;
     background: url("/assets/smartbot.png") no-repeat;
+    background-size: contain;
     width: 48px;
     height: 48px;
     float: left;
-    margin: 0 6px 0 0;
+    margin: 3px 6px 0 0;
 }
